fixed height on mobile.

--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,7 @@ header p{
 @media only screen and (max-width: 768) {
     .card{
         width: 70vw;
+        height: 650px;
     }
 
     #reader{
